--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "tailwindcss": "^3.4.1"
+    "disable-react-error-overlay": "^0.0.1",
+    "tailwindcss": "^3.4.1",
+    "webpack-cli": "^5.1.4"
   }
 }
